<resources>
    <string name="app_name">AgeInMinutes</string>
    <string name="textCalculateYour">Calculate Your</string>
    <string name="age">Age</string>
    <string name="in_minutes">In Minutes</string>
    <string name="select_date">Selected Date</string>
    <string name="none">None</string>
    <string name="in_minutes_till_date">In Minutes Till Date</string>
    <string name="_0">0</string>

</resources>