<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textCalculateYour"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/color2"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="25sp"
            android:layout_margin="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="#5E7080"
            android:layout_marginTop="1dp"
            android:textColor="@color/black"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_minutes"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:textColor="@color/color2"/>

    <Button android:id="@+id/btnDatepicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/color1"
            android:layout_marginTop="10sp"/>

    <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@color/color2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="#8A632797"/>

    <TextView
            android:id="@+id/tvSelectedDateInMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="90sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:textColor="@color/color2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_minutes_till_date"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="#8A632797"/>

</LinearLayout>
